fix(security): configure setAllowedOriginPatterns with wildcard for CORS preflight support on Vercel